# pisa-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  assembly.xml  dev-requirements.txt  pisa_cfg_tmp  pyproject.toml  pytest.ini  report.xml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
.github/workflows/: main.yml
coverage/: cobertura-coverage.xml
example_data/: 6nxr_updated.cif
example_data/json_output/: 6nxr-assembly1-interfaces.json  6nxr-assembly1.json
example_data/xml_output/: assembly.xml  interfaces.xml
pisa_to_json/: #run_pisa.py#  main.py  run_pisa.py
pisa_utils/: .#covariations_int.py  .#run_pisa.py  analyse.py  analyze.py  cli_tools.py  constants.py  covariations_int.py  dictionaries.py  field_handlers.py  file_io.py  parsers.py  post_process_parsers.py  post_processers.py  run.py  run.py~  run_pisa.py  utils.py
pisa_utils/models/: data_fields.py  data_models.py  labels.py  models.py  post_process_models.py  validation_error_handlers.py
run/: run.py
tests/: #test_analyze.py#  test_analyze.py  test_covariations_int.py  test_dictionaries.py  test_json_file.py  test_json_file.py~  test_models.py  test_parsers.py  test_utils.py  test_validate_xml.py  test_validate_xml.py~  test_xml_files.py  test_xml_files.py~
tests/data/: #6nxr_updated.cif#  6nxr-assem1_interfaces.json  6nxr-assembly1-interfaces.json  6nxr-assembly1.json  6nxr_updated.cif  F5HCH8_cov.csv  assembly.xml  assembly_schema.xsd  cov_pairs.csv  cov_pairs.csv~  input_json.json  interfaces.xml  interfaces_ligand.xml  interfaces_schema.xsd  molecules.xml  pisa.cfg  pisa_cfg_tmp  test_interfaces.xml  test_result.json
tests/data/actual_output/interfaces/3hax_interfaces_multi/: interface_1.json  interface_2.json  interface_3.json
tests/data/expected_output/: 3hax_assembly_multi_asmset.json  3hax_assembly_multi_asmset_from_pdb.json  3hax_assembly_no_asmset.json  3hax_assembly_single_asmset.json  3hax_assembly_single_asmset_from_pdb.json  assembly_no_asm_no_asu.json  interface_summary.json
tests/data/expected_output/af3_heterodimer_with_atp/: assemblies.json
tests/data/expected_output/af3_heterodimer_with_atp/extended_data/: assemblies_extended.json  interfaces_extended.json  (+1 more)
tests/data/expected_output/post_processed_jsons/: 3hax_assembly_multi_asmset_post_proc.json  3hax_multi_interface_details_list.json  interface_details_list.json
tests/data/mock_data/: 3hax.cif  3hax.ent  3hax_assembly_multi_asmset.xml  3hax_assembly_multi_asmset_from_pdb.xml  3hax_assembly_no_asmset.xml  3hax_assembly_single_asmset.xml  3hax_assembly_single_asmset_from_pdb.xml  3hax_interfaces_multi.xml  3hax_interfaces_none.xml  3hax_interfaces_single.xml  3hax_updated.cif  af3_heterodimer_with_atp.cif  assembly_no_asm_no_asu.xml  no_assembly_results_because_overlap.xml
tests/data/mock_data/af3_heterodimer_with_atp/: assembly.xml  interfaces.xml
tests/data/mock_data/interface_summary_parser/: assemblies.json
tests/data/mock_data/list_results/: interfaces_extended_no_interfaces.txt
tests/data/mocks/: 6nxr_updated.cif  basic_mock.xml  bonds.xml  interfaces.xml
tests/data/pisa_6nxr/: _pisa_assemblies  _pisa_interfaces  _pisa_params  _pisa_structure
tests/models/: test_complex.py  test_interface_summary.py  test_post_process_models.py  test_residue.py  test_validation_error_handlers.py
tests/parsers/: test_post_process_parsers.py
(+96 files in other folders)
