[metadata]
name = pisa_analysis
author = Grisell Diaz Leines
author_email = gdiazleines@ebi.ac.uk
description = This python package works with PISA-Lite to analyse data for macromolecular interfaces and interactions in assemblies.
version = 1.3.0
url = https://github.com/PDBe-KB/pisa-analysis
keywords =
  interfaces assemblies pisa json 
classifiers =
  Development Status :: ?
  Intended Audience :: Life Science/Structural Biology
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  requests

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts =
  pisa_analysis = pisa_utils.run:main
