[metadata]
name = pisa_analysis
author = Grisell Diaz Leines
author_email = gdiazleines@ebi.ac.uk
description = This python package works with PISA to analyse data for macromolecular interfaces and interactions in assemblies.
version = attr: __version__.__version__
url = https://github.com/PDBe-KB/pisa-analysis
keywords =
  interfaces assemblies pisa json
classifiers =
  Development Status :: ?
  Intended Audience :: Life Science/Structural Biology
  Intended Audience :: Developers
  Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.9
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  requests
  lxml >=4.6.3,<5.0.0

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts =
  pisa_analysis = pisa_utils.run:main
  pisa_analysis_service = pisa_utils.run:service
  covariations_int = pisa_utils.covariations_int:main

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
